Scanner - Java 17 features